WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197758
Returning incorrect marked text rects
https://bugs.webkit.org/show_bug.cgi?id=197758
Summary
Returning incorrect marked text rects
Megan Gardner
Reported
2019-05-09 16:41:50 PDT
Returning incorrect marked text rects
Attachments
Patch
(2.73 KB, patch)
2019-05-09 16:43 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch for landing
(2.73 KB, patch)
2019-05-10 13:37 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Megan Gardner
Comment 1
2019-05-09 16:43:56 PDT
Created
attachment 369529
[details]
Patch
Megan Gardner
Comment 2
2019-05-09 16:44:22 PDT
<
rdar://problem/46548586
>
Tim Horton
Comment 3
2019-05-09 17:41:08 PDT
Comment on
attachment 369529
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=369529&action=review
> Source/WebKit/ChangeLog:9 > + We are not returning marked text rects in the correct view coordinant space.
coordinate
> Source/WebKit/ChangeLog:13 > + (WebKit::WebPage::platformEditorState const):
Where's the test :P
Megan Gardner
Comment 4
2019-05-10 13:37:08 PDT
Created
attachment 369593
[details]
Patch for landing
WebKit Commit Bot
Comment 5
2019-05-10 13:52:38 PDT
Comment on
attachment 369593
[details]
Patch for landing Clearing flags on attachment: 369593 Committed
r245195
: <
https://trac.webkit.org/changeset/245195
>
WebKit Commit Bot
Comment 6
2019-05-10 13:52:39 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug