Cherry-pick r245195. rdar://problem/46548586

Returning incorrect marked text rects
    https://bugs.webkit.org/show_bug.cgi?id=197758
    <rdar://problem/46548586>

    Reviewed by Tim Horton.

    We are not returning marked text rects in the correct view coordinate space.
    This is the same translation we are applying to the caret rects.

    * WebProcess/WebPage/ios/WebPageIOS.mm:
    (WebKit::WebPage::platformEditorState const):

    Canonical link: https://commits.webkit.org/211933@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245195 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/211878.10@safari-608.1.24-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-608.1.24-branch@245231 268f45cc-cd09-0410-ab3c-d52691b4dbfc